@@ -1,4 +1,5 @@
 4.0
+ * Introduce error metrics for repair (CASSANDRA-13387)
  * Upgrade SLF4J from 1.7.7 to 1.7.25
  * Default for start_native_transport now true if not set in config (CASSANDRA-13656)
  * Don't add localhost to the graph when calculating where to stream from (CASSANDRA-13583)
